titel en head gedeelte aanpassen en favicon en css

--- a/webbureau/css/style.css
+++ b/webbureau/css/style.css
@@ -68,3 +68,11 @@ h2 {
 .ondertitel {
     font-family: 'Righteous', cursive;
 }
+
+.icon-block img {
+    transition: 1s;
+}
+
+.icon-block img:hover {
+    transform: scale(1.1);
+}
