--- a/webbureau/css/style.css
+++ b/webbureau/css/style.css
@@ -16,7 +16,7 @@ p {
 }
 
 .sidenav-trigger {
-    color: #26a69a;
+    color: #1c707b;
 }
 
 .parallax-container {
@@ -57,13 +57,15 @@ p {
 
 footer.page-footer {
     margin: 0;
+    background-color: #1c707b;
 }
 
 h1,
 h2,
 h3 {
     font-family: 'Righteous', cursive;
-    color: #26a69a;
+    color: #1c707b;
+    text-shadow: 3px 3px 5px white;
 }
 
 .ondertitel {
@@ -87,4 +89,8 @@ h3 {
     width: 150px;
     height: 50px;
     margin-top: 3px;
+}
+
+h5 {
+    font-weight: bold;
 }
