--- a/webbureau/css/style.css
+++ b/webbureau/css/style.css
@@ -88,3 +88,31 @@ h3 {
     height: 50px;
     margin-top: 3px;
 }
+
+.actie_min img {
+    transition: 1s;
+}
+
+.actie_min img:hover {
+    transform: scale(1.02);
+    filter: blur(3px);
+}
+
+.fa {
+    padding: 15px;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+/* Twitter */
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
