--- a/min/css/min.css
+++ b/min/css/min.css
@@ -7,4 +7,45 @@ en die bovenop materialize komen */
 body {
     background-color: #eee;
     color: darkblue;
+    font-family: 'Montserrat', sans-serif;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.titel {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.talen {
+    background: linear-gradient(104deg, rgb(46, 35, 229) 0%, rgba(48, 125, 255, 1) 100%);
+    padding: 50px;
+    border-radius: 30px;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.talen ul li {
+    padding-top: 10px;
+    transition: 1s;
+}
+
+.talen ul li a {
+    color: white;
+}
+
+.talen ul li:hover {
+    padding-left: 10px;
+}
+
+.background {
+    height: 100vh;
 }
