--- a/min/css/min.css
+++ b/min/css/min.css
@@ -31,6 +31,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 3px 3px #888888;
 }
 
 .talen ul li {
@@ -58,4 +59,5 @@ body {
 
 .background {
     height: 100vh;
+    background: #d0e9f1;
 }
