--- a/min/css/min.css
+++ b/min/css/min.css
@@ -5,9 +5,11 @@
 en die bovenop materialize komen */
 
 body {
-    background-color: #eee;
+    background: #d0e9f1;
     color: darkblue;
     font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 * {
@@ -59,5 +61,23 @@ body {
 
 .background {
     height: 100vh;
-    background: #d0e9f1;
+}
+
+p {
+    color: black;
+    padding: 30px;
+}
+
+li {
+    color: black;
+    margin-left: 30px;
+    list-style-type: disc !important;
+}
+
+.container {
+    background-color: white;
+}
+
+.row {
+    margin-bottom: 0;
 }
