--- a/min/css/min.css
+++ b/min/css/min.css
@@ -8,32 +8,46 @@ body {
     background: #d0e9f1;
     color: darkblue;
     line-height: 1.5;
+    font-family: 'Armata', sans-serif;
+    font-size: 16px;
 }
 
 .footer {
     background-color: rgb(33, 150, 243);
     padding-top: 50px;
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
     text-align: center;
+}
+
+footer .row {
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 70px;
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
 }
 
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
 .fa-facebook {
     background: #3B5998;
     color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    line-height: 1.5;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
 }
 
 * {
@@ -46,6 +60,14 @@ body {
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.titel img {
+    height: 150px;
+}
+
+nav ul {
+    padding-right: 20px;
 }
 
 .talen {
@@ -94,8 +116,6 @@ body {
 
 li {
     color: black;
-    margin-left: 30px;
-    list-style-type: disc !important;
 }
 
 .container {
@@ -121,7 +141,37 @@ h4 {
 }
 
 #logo {
-    width: 150px;
-    height: 100px;
+    height: 64px;
+    background-color: white;
 }
 
+.footer-copyright {
+    background-color: white;
+    color: black;
+}
+
+h1 {
+    font-size: 35px;
+    padding-top: 30px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #2196F3
+}
+
+footer p {
+    padding: 10px;
+    font-size: 12px;
+}
+
+footer p a {
+    color: white;
+    text-decoration: underline;
+}
+
+.footer-copyright p a {
+    color: black;
+}
+
+.footer-copyright p a:hover {
+    text-decoration: none;
+}
