--- a/min/css/min.css
+++ b/min/css/min.css
@@ -111,7 +111,28 @@ nav ul {
 
 .txt p {
     color: black;
-    padding: 30px;
+    padding: 20px;
+}
+
+.onder {
+    padding-bottom: 40px;
+}
+
+.container .para {
+    transition: 1s;
+    padding-top: 10px;
+    margin-bottom: 10px;
+
+    /*background: linear-gradient(104deg, #a7e0f3 0%, #d0e9f1 100%);*/
+}
+
+.container .para:hover {
+    transform: scale(1.02);
+    box-shadow: 3px 3px 3px 3px #cdcdcd;
+}
+
+.container .para p {
+    padding: 30px
 }
 
 li {
@@ -120,6 +141,8 @@ li {
 
 .container {
     background-color: white;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .row {
@@ -134,6 +157,7 @@ iframe {
 
 h4 {
     font-size: 20px;
+    margin: 2px;
 }
 
 .maps iframe {
@@ -157,6 +181,17 @@ h1 {
     font-weight: bold;
     color: #2196F3
 }
+
+#opening {
+    margin-bottom: 10px;
+}
+
+h4 {
+    color: black;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 
 footer p {
     padding: 10px;
