--- a/min/css/min.css
+++ b/min/css/min.css
@@ -175,3 +175,21 @@ footer p a {
 .footer-copyright p a:hover {
     text-decoration: none;
 }
+
+.figuur:hover {
+
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px gray;
+    transform: scale(1.1);
+
+}
+
+.figuur {
+    transition: 2s;
+    padding: 20px 10px;
+}
+
+.logofoto {
+    max-width: 100%;
+    height: 100px;
+}
