achtergrond van h1 verandert

--- a/min/css/min.css
+++ b/min/css/min.css
@@ -193,6 +193,20 @@ h1 {
 
 #opening {
     margin-bottom: 10px;
+    padding-top: 30px;
+}
+
+#homebg {
+    background-image: url(../img/actie_min_brood.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
+    margin: 0;
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
 }
 
 h4 {
@@ -201,6 +215,25 @@ h4 {
     font-size: 16px;
 }
 
+.hulp {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#knop h4 a {
+    padding: 10px;
+    background-color: #0967C4;
+    color: white;
+    font-size: 16px;
+}
 
 footer p {
     padding: 10px;
