hopelijk juist nu alles

--- a/min/css/min.css
+++ b/min/css/min.css
@@ -109,6 +109,8 @@ nav ul {
     height: 100vh;
 }
 
+
+
 .txt p {
     color: black;
     padding: 20px;
@@ -219,6 +221,8 @@ h4 {
     position: relative;
     text-align: center;
     color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .centered {
@@ -232,7 +236,15 @@ h4 {
     padding: 10px;
     background-color: #0967C4;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
+}
+
+.effect {
+    transition: 1s;
+}
+
+.effect:hover {
+    transform: scale(1.1);
 }
 
 footer p {
@@ -286,4 +298,13 @@ figure figcaption {
 
 .ccakleur {
     background-color: #0967C4;
+}
+
+@media screen and (min-width: 600px) {
+    #knop h4 a {
+        padding: 15px;
+        background-color: #0967C4;
+        color: white;
+        font-size: 20px;
+    }
 }
