--- a/min/css/min.css
+++ b/min/css/min.css
@@ -196,9 +196,9 @@ h1 {
     padding-top: 30px;
 }
 
-#homebg {
-    background-image: url(../img/actie_min_brood.jpg);
-    background-position: center center;
+
+.bckgrnd{
+      background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -207,7 +207,28 @@ h1 {
     padding-bottom: 50px;
     padding-top: 50px;
 }
+#homebg {
+    background-image: url(../img/actie_min_brood.jpg);
 }
+#opisopbg{
+      background-image: url(../img/actie_MIN_bloemen.jpg); 
+}
+#activiteitenbg{
+       background-image: url(../img/actie_MIN_conserven.jpg); 
+}
+#historiekbg{
+     background-image: url(../img/actie_MIN_fruit.jpg); 
+}
+#donerenbg{
+         background-image: url(../img/actie_MIN_groenten.jpg); 
+}
+#armoedebeleidbg{
+      background-image: url(../img/actie_MIN_tomaat.jpg); 
+}
+#sponsorsbg{
+         background-image: url(../img/actie_MIN_yoghurt.jpg); 
+}
+
 
 h4 {
     color: black;
@@ -286,4 +307,7 @@ figure figcaption {
 
 .ccakleur {
     background-color: #0967C4;
+}
+#opisop{
+    padding-top: 40px;
 }
