--- a/min/css/min.css
+++ b/min/css/min.css
@@ -360,7 +360,7 @@ figure figcaption {
 #opisop{
     padding-top: 40px;
 
-
+}
 @media screen and (min-width: 600px) {
     #knop h4 a {
         padding: 15px;
@@ -373,4 +373,7 @@ figure figcaption {
 .video {
     margin-left: 50px;
     margin-right: 50px;
+}
+.hover:hover{
+    opacity: 0.7;
 }
