--- a/min/css/min.css
+++ b/min/css/min.css
@@ -202,7 +202,7 @@ h4 {
 
 #logo {
     height: 64px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .footer-copyright {
@@ -223,6 +223,7 @@ h1 {
     padding-top: 30px;
 }
 
+.brand-logo img {}
 
 .bckgrnd {
     background-position: center center;
@@ -240,29 +241,34 @@ h1 {
     color: white;
 }
 
-#opisopbg{
-      background-image: url(../img/actie_MIN_tomaat.jpg ); 
-     color: white;
+#opisopbg {
+    background-image: url(../img/actie_MIN_tomaat.jpg );
+    color: white;
 }
-#activiteitenbg{
-     color: white;
-       background-image: url(../img/actie_MIN_conserven.jpg); 
+
+#activiteitenbg {
+    color: white;
+    background-image: url(../img/actie_MIN_conserven.jpg);
 }
-#historiekbg{
-     background-image: url(../img/actie_MIN_fruit.jpg); 
-     color: white;
+
+#historiekbg {
+    background-image: url(../img/actie_MIN_fruit.jpg);
+    color: white;
 }
-#donerenbg{
-         background-image: url(../img/actie_MIN_groenten.jpg); 
-     color: white;
+
+#donerenbg {
+    background-image: url(../img/actie_MIN_groenten.jpg);
+    color: white;
 }
-#armoedebeleidbg{
-      background-image: url(../img/actie_MIN_bloemen.jpg); 
-     color: white;
+
+#armoedebeleidbg {
+    background-image: url(../img/actie_MIN_bloemen.jpg);
+    color: white;
 }
-#sponsorsbg{
-         background-image: url(../img/actie_MIN_yoghurt.jpg); 
-     color: white;
+
+#sponsorsbg {
+    background-image: url(../img/actie_MIN_yoghurt.jpg);
+    color: white;
 
 }
 
@@ -366,12 +372,19 @@ figure figcaption {
 }
 
 }
+
 @media screen and (min-width: 600px) {
     #knop h4 a {
         padding: 15px;
         background-color: #0967C4;
         color: white;
         font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #logo {
+        height: 56px;
     }
 }
 
@@ -410,7 +423,7 @@ figure figcaption {
 
 }
 
-.hover:hover{
+.hover:hover {
     opacity: 0.7;
 }
 
@@ -418,4 +431,3 @@ figure figcaption {
 :focus {
     background-color: #244891;
 }
-
